fixed hero collage on homepage to not get distorted

--- a/app/src/components/Nav/header-custom.css
+++ b/app/src/components/Nav/header-custom.css
@@ -5,6 +5,7 @@ header {
   margin-left: 138px; 
   margin-top: 28px; 
   margin-bottom: 75px; 
+  padding-right: 50px; 
 } 
 
 #navheader img {
