--- a/app/src/components/homepage/hero-custom.css
+++ b/app/src/components/homepage/hero-custom.css
@@ -1,9 +1,22 @@
+#heroheader {
+  display: flex; 
+  flex-direction: row; 
+  margin-left: 138px; 
+}
+
 #heroheader h2 {
   font-size: 62px; 
-  margin-right: 400px; 
+  margin-right: 600px; 
   margin-top: 100px;
   position: relative; 
   line-height: 137.827%;
+}
+
+#heading-subheading {
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: flex-start; 
 }
 
 #heroheader h6 {
@@ -16,6 +29,12 @@
   margin-left: 138px; 
   display: flex; 
   flex-direction: row; 
+}
+
+#heading-container {
+  display: flex; 
+  flex-direction: column; 
+  align-items: flex-start;
 }
 
 #subheading {
